# mtf

./: .gitignore  CMakeLists.txt  Readme.txt  board_640_480.raw  config.ini  dirty_lens_config.ini  duxin_037.raw  edge.raw  mtf_config.ini  output.raw  run.bat
include/: get_config.h  sfr_iso_oycq.h
pt/dirty_lens/: run_dirty_lens.py
pt/dirty_lens/config/: down_left.ini  down_right.ini  front_left.ini  front_right.ini
pt/dirty_lens/input/: down_left.pgm  down_right.pgm  front_left.pgm  front_right.pgm
pt/mtf/: run_mtf.py
pt/mtf/config/: down_left.ini  down_right.ini  front_left.ini  front_right.ini
pt/mtf/input/: down_left.pgm  down_right.pgm  front_left.pgm  front_right.pgm
scripts/: caculate_bottom_brightness.py  convert_img.py  find_roi.py  sfr.py  show_c_result.py
src/: find_area.c  find_roi.c  get_config.c  main.c  mitre_sfr.c  raw_to_bmp.c  sfr_iso.c  sfr_iso_oycq.c
src/common/include/: raw_to_bmp.h
src/dirty_lens/: dirty_main.c  get_config.c  get_dirty_config.c  main.c
src/dirty_lens/include/: get_config.h  get_dirty_config.h
src/mtf/: get_config.c  get_mtf_config.c  main.c  mtf_main.c  sfr_iso.c  sfr_iso_oycq.c
src/mtf/include/: get_mtf_config.h  sfr_iso_oycq.h
